# Comfyfy

./: .env  .gitignore  Cargo.toml  README.md  token.json
src/: main.rs  spotify_client_auth.rs  tui.rs
