[package]
name = "comfyfy"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.218"
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
crossterm = {version = "0.28.1", features = ["event-stream"]}
webbrowser = "1.0.3"
